test/errors/enumeration_types_error/zs/cyclic_definition_error.zs
package cyclic_definition_error;

enum uint8 CyclicDefinition
{
    NONE       = 000b,
    DARK_RED   = DARK_RED,
    DARK_BLACK = 111b
};
